[gd_scene load_steps=8 format=2]

[ext_resource path="res://BombExplosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bomb.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 500.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
emission_enabled = true
emission = Color( 0.372549, 0.941176, 0.952941, 1 )
emission_energy = 200.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=4]

[sub_resource type="SphereShape" id=5]

[node name="Bomb" type="RigidBody" groups=["Bomb"]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="." groups=["Bomb"]]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.46599, 0, 0, 0, 1.46599, 0, 0, 0, 1.46599, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 20.0776, 0, 0, 0, 20.0776, 0, 0, 0, 20.0776, 0, 0, 0 )
shape = SubResource( 5 )
disabled = true

[node name="BombExplosion" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="explosion" type="Timer" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
